--- a/hashsite/myapp/templates/form.html
+++ b/hashsite/myapp/templates/form.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Django File Upload and Getting hash</title>
+        <title>Django File Upload and hash verification</title>
     </head>
 
     <body>
@@ -12,13 +12,18 @@
             <p>{{ form.non_field_errors }}</p>
 
             <p>{{ form.docfile.label_tag }} {{ form.docfile.help_text }}</p>
-
             <p>
                 {{ form.docfile.errors }}
                 {{ form.docfile }}
             </p>
 
-            <p><input type="submit" value="Upload"/></p>
+            <p>{{ form.dochash.label_tag }} {{ form.dochash.help_text }}</p>
+            <p>
+                {{ form.dochash.errors }}
+                {{ form.dochash }}
+            </p>
+
+            <p><input type="submit" value="Verify"/></p>
         </form>
     </body>
 
