SHA1 input required=False

--- a/hashsite/myapp/templates/form.html
+++ b/hashsite/myapp/templates/form.html
@@ -23,7 +23,7 @@
                 {{ form.dochash }}
             </p>
 
-            <p><input type="submit" value="Verify"/></p>
+            <p><input type="submit" value="Get SHA1 / Verify"/></p>
         </form>
     </body>
 
